# vsgUnity

./: .gitignore  CMakeLists.txt  LICENSE  README.md
UnityProject/Assets/: cube.vsga  cube.vsgb  export.vsga  export.vsgb
UnityProject/Assets/Scenes/: coordsystem.unity  lodscene.unity  multimaterial.unity  multiobject.unity  terrainscene.unity
UnityProject/Assets/Scenes/Models/: Teapot-SubMeshes.FBX  TerrainRedLayer.terrainlayer  axis.FBX
UnityProject/Assets/Scenes/Models/Materials/: BlueChecker.mat  RedChecker.mat  Teapot-BodyMat.mat  Teapot-LidMat.mat  WhiteChecker.mat
UnityProject/Assets/vsgUnity/: CoordSytemConverter.cs  GraphBuilder.cs  GraphBuilderUtil.cs  LightConverter.cs  MaterialConverter.cs  MeshConverter.cs  ShaderMapping.cs  TerrainConverter.cs  TextureConverter.cs  TransformConverter.cs  UniformMapping.cs  Vulkan.cs
UnityProject/Assets/vsgUnity/Editor/: ExportWindow.cs  ExporterSettings.cs  vsgUnityExporterSettings.asset
UnityProject/Assets/vsgUnity/Native/: GraphBuilderInterface.cs  NativeLog.cs  NativeUtils.cs
UnityProject/Assets/vsgUnity/Shaders/: CTS+CTS Terrain Shader Advanced Trial-ShaderMapping.json  Default-Shader-Mapping.asset  Default-ShaderMapping.json  PBR_mapping.asset  assimp.vert  assimp_pbr.frag  ctsTerrainShader.frag  standardShader.frag
unity2vsg/: .clang-format  CMakeLists.txt
unity2vsg/include/unity2vsg/: DataTypes.h  Debug.h  DebugLog.h  Export.h  GraphicsPipelineBuilder.h  NativeUtils.h  ShaderUtils.h  SkyboxUtils.h  unity2vsg.h
unity2vsg/src/unity2vsg/: CMakeLists.txt  DataTypes.cpp  Debug.cpp  DebugLog.cpp  GraphicsPipelineBuilder.cpp  ShaderUtils.cpp  SkyboxUtils.cpp  unity2vsg.cpp  unity2vsgConfig.cmake
unity2vsg/src/unity2vsg/glsllang/: ResourceLimits.cpp
vsgUnity/: .clang-format
vsgUnity/Assets/Scenes/: previewscene.unity
vsgUnity/Assets/Scenes/Models/: 100TeaPots-Instanced-4Groups-4DiffuseTex.FBX
vsgUnity/Assets/Scenes/Models/Materials/: Material-02.mat  Material-04.mat  Teapot-BodyMat.mat  Teapot-HandleMat.mat  Teapot-SpoutMat.mat
vsgUnity/Assets/vsgUnity/: Tests.cs
vsgUnity/Assets/vsgUnity/Editor/: ExportWindow.cs  vsgExportWindow.cs
vsgUnity/Assets/vsgUnity/Models/Materials/: Material-01.mat  Material-03.mat
vsgUnity/Assets/vsgUnity/Native/: Common.cs  DataTypes.cs  GraphBuilder.cs  NativeLog.cs  NativeTests.cs  NativeUtils.cs
vsgUnity/ProjectSettings/: ProjectSettings.asset
vsgUnityProject/: export.vsgb
vsgUnityProject/Assets/: New Terrain.asset
vsgUnityProject/Assets/Scenes/: cullscene.unity  normalmapping.unity  previewscene.unity
vsgUnityProject/Assets/Scenes/Models/: Teapot-NormalMapped.FBX  Terrain.asset  TerrainGreenLayer.terrainlayer  TerrainRedLayer.terrainlayer
vsgUnityProject/Assets/Scenes/Models/Materials/: GreenChecker.mat  WhiteChecker-NormalMapped.mat  checker-black+red-2x2.mat
vsgUnityProject/Assets/vsgUnity/: GraphBuilder.cs  LODConverter.cs  ShaderMapping.cs  TextureConverter.cs  Vulkan.cs
vsgUnityProject/Assets/vsgUnity/Editor/: ExportWindow.cs
vsgUnityProject/Assets/vsgUnity/Native/: GraphBuilder.cs  MaterialConverter.cs  MaterialMapping.cs  MeshConverter.cs  NativeLog.cs  NativeUtils.cs  NewLayer 1.terrainlayer  NewLayer.terrainlayer  ShaderMapping.cs  TerrainConverter.cs  TextureConverter.cs  Vulkan.cs
vsgUnityProject/Assets/vsgUnity/Shaders/: Default-ShaderMapping.json  DefaultTerrain-ShaderMapping.json  cstTerrainShader.frag  cstTerrainShader.vert  cstTerrainShaderMapping.json  standardShader.frag  standardTerrainShader.frag  terrainFragmentShader.frag  terrainVertexShader.vert
vsgUnityProject/ProjectSettings/: QualitySettings.asset
